# op_ocr_engine

./: .gitignore  CMakeLists.txt  README.md
cpp_infer/: CMakeLists.txt
cpp_infer/include/: ocr_engine_api.h
cpp_infer/src/: ocr_api.cpp
include/: tess_ocr.h
py_paddle_server/: README.md  app.py  requirements.txt
src/: main.cpp  ocr_engine.cpp  ocr_engine.h  ocr_server.cpp  ocr_server.h  tess_engine.def  tess_ocr.cpp  test.cpp
tests/: ocr_engine_test.cpp  ocr_integration_test.cpp
